# plotconvert

./: .gitignore  Cargo.toml  LICENSE  README-BR.md  README.md  install-linux.sh
.cursor/rules/: compile-dist.mdc
.github/workflows/: release.yml
src/: dxf.rs  dxf_reader.rs  hpgl.rs  hpgl_writer.rs  lib.rs  main.rs  model.rs  parser.rs  pdf_writer.rs  png_writer.rs  svg_reader.rs  svg_writer.rs
tests/: conversion.rs
