[package]
name = "plotconvert"
version = "0.4.0"
edition = "2024"
description = "Cross-platform converter between HP-GL/HP-GL2, DXF, and SVG"
license = "MIT"

[dependencies]
resvg = "0.45"
usvg = "0.45"

[lib]
name = "plotconvert"
path = "src/lib.rs"

[[bin]]
name = "plotconvert"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
